--- a/css/map.css
+++ b/css/map.css
@@ -3,3 +3,57 @@
 	height: 60%;
 	padding-bottom: 10%; 
 }
+
+/**
+* Set rules for how the map overlays
+* (info box and legend) will be displayed
+* on the page. */
+.map-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.8);
+  margin-top: 5px;
+  font-family: Arial, sans-serif;
+  overflow: auto;
+  border-radius: 3px;
+}
+
+#features {
+  top: 0;
+  height: 25px;
+  margin-left: 20px;
+  margin-top: 105px;
+  width: 199px;
+  text-align: center;
+}
+
+#features p {
+	margin: auto;
+}
+
+#legend {
+  padding: 10px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  line-height: 18px;
+  margin-left: 20;
+  height: 95px;
+  width: 199px;
+}
+
+.legend-key {
+  display: inline-block;
+  border-radius: 20%;
+  width: 16px;
+  height: 8px;
+  margin-right: 5px;
+}
+
+.dash {
+	background-color: #fff;
+	width: 2px;
+	height: 8px;
+	left:0;
+	margin-left: 4px;
+	display: inline-block;
+}
