--- a/css/map.css
+++ b/css/map.css
@@ -4,10 +4,6 @@
 	padding-bottom: 10%; 
 }
 
-/**
-* Set rules for how the map overlays
-* (info box and legend) will be displayed
-* on the page. */
 .map-overlay {
   position: absolute;
   top: 0;
@@ -57,3 +53,42 @@
 	margin-left: 4px;
 	display: inline-block;
 }
+
+#search-marker {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  cursor: pointer;
+  background-color: #4286f4;
+  background-size: cover;
+}
+
+.mapboxgl-popup {
+    max-width: 200px;
+}
+
+#routing-button {
+  background: url(../img/road-with-two-placeholders.png);
+  background-color: rgba(255, 255, 255, 1);
+  background-size: 90%;
+  background-position: 2px;
+  background-repeat: no-repeat;
+  right: 0;
+  top: 0;
+  margin-right: 25px;
+  margin-top: 55px;
+}
+
+.map-button {
+  border-radius: 3px;
+  position: absolute;
+  width: 40px;
+  height: 40px;
+}
+
+
+#imprint {
+  font-size: 8;
+}
+    
+</style>
